<resources>
    <string name="app_name">My Chronology</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">+</string>
    <string name="action_question">\?</string>

    <string name="add_event_title">Title</string>
    <string name="add_event_tags">Tags</string>
    <string name="add_event_description">Description</string>
    <string name="q_card_question">Q)</string>

    <string name="add_event_submit">Submit</string>
    <string name="add_event_cancel">Cancel</string>
    <string name="add_event_remove">Remove</string>

    <string name="q_card_ok">Ok</string>
    <string name="q_card_cancel">Cancel</string>
    <string name="q_card_already">Already have one</string>

    <string name="facebook_app_id">707284852741502</string>

</resources>
